apps/base/job-accelerator/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
        app.activescott.com/component: db
    spec:
      containers:
        - name: postgres
          image: postgres:18@sha256:4ef4dbc939d61acea57712655ddb4b4ab27419c913f94cca0cd57cb3ea3c2280
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /data
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.1"
              memory: "256Mi"
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - jobaccelerator
                - -d
                - jobaccelerator
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - jobaccelerator
                - -d
                - jobaccelerator
            initialDelaySeconds: 30
            periodSeconds: 30
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard
        resources:
          requests:
            storage: 10Gi
